small logic fixes in non-det simulation